--- a/style.css
+++ b/style.css
@@ -30,19 +30,40 @@ div.container {
     background-position: -60px;
 }
 
-.logo {
+.logo-div {
     background-color: black;
-    height: 140px;
-    opacity: 0.5;
+    height: 120px;
+    opacity: 1;
     color: white;
+    font-family: 'NeocyrRegular', system-ui, sans-serif;
     font-weight: bold;
+    font-size: 40px;
 
     position: relative;
-    top: 72px;
+    top: 94px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.logo-box {
+    height: 80%;
+    width: 80px;
+}
+
+.logo-box > img {
+    max-width: 100%;
+    max-height: 100%;
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .container>.info {
-    flex: 2 1 0%;
+    flex: 1.8 1 0%;
 }
 
 .info {
