--- a/style.css
+++ b/style.css
@@ -95,6 +95,15 @@ div.container {
 
 .card {
     flex: 1 1 0%;
-    background-color: white;
-    border: 1px solid black;
+    background-color:  #e6ecea ;
+}
+
+.info div:nth-child(2) {
+    background-color: whitesmoke;
+    border: 1px solid #eeeeee;
+    box-shadow: 0 2px 5px #8f9393;
+}
+
+.info div:last-child {
+    z-index: -1;
 }
