--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ div.container {
     padding-left: 25px;
 }
 
-.info div:nth-child(2) {
+.info>div:nth-child(2) {
     background-color: whitesmoke;
     border: 1px solid #eeeeee;
     box-shadow: 0 2px 5px #8f9393;
@@ -156,3 +156,29 @@ a {
 }
 
 /* .info div ends here */
+
+/* form div begins here */
+.form {
+    height: 180px;
+    width: 95%;
+    background-color: greenyellow;
+    color: whitesmoke;
+}
+
+form {
+    height: 100%;
+    width: 77%;
+    background-color: deepskyblue;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.mid>h5 {
+    margin-top: 7px;
+    margin-bottom: 7px;
+}
+
+/* form div ends here */
