--- a/style.css
+++ b/style.css
@@ -151,6 +151,15 @@ button {
     box-shadow: 0 2px 3px black;
 }
 
+button:hover {
+    background-color: #046b09;
+}
+
+button:active {
+    background-color: #046b09;
+    transform: translateY(2px);
+}
+
 a {
     cursor: pointer;
     text-decoration: none;
