--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ body {
 div.container {
     height: 100vh;
     width: 65vw;
-    margin: auto;
+    margin: 0 auto;
+    background-color: red;
 
     display: flex;
 }
